--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               Mojolicious-Plugin-Mobi
-version:            0.06
+version:            0.07
 abstract:           ~
 author:
-    - Valcho Nedelchev <kumcho@vulcho.com>
+    - Valcho Nedelchev <weby@cpan.org>
 license:            unknown
 distribution_type:  module
 configure_requires:
@@ -11,7 +11,7 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Mojolicious:  4.50
+    Mojolicious:  9.0
 no_index:
     directory:
         - t
